# bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  database.md  license.md  readme.md  sql-cheat-sheet.md  to-fix.md  to_fix.md  todo.md
crates/base/: Cargo.toml
crates/base/src/: lib.rs  test.rs
crates/base/src/model/: change.rs  key.rs  mod.rs  percent.rs  venue.rs
crates/base/src/model/address/: id.rs
crates/base/src/model/auth/: mod.rs
crates/base/src/model/invocation/: id.rs  mod.rs
crates/base/src/model/notification/: channel.rs  id.rs  kind.rs  mod.rs  payload.rs  telegram.rs  type.rs
crates/base/src/model/rule/: id.rs  mod.rs  name.rs  status.rs  version.rs
crates/base/src/model/sequence/: action.rs  condition.rs  error.rs  fact.rs  facts.rs  field.rs  mod.rs  operator.rs  value.rs
crates/base/src/model/solana/: account.rs  indexer.rs  mod.rs  signature.rs  slot.rs  transaction.rs
crates/base/src/model/strategy/: id.rs  mod.rs  name.rs  version.rs
crates/base/src/model/swap/: id.rs  mod.rs
crates/base/src/model/token/: amount.rs  decimals.rs  description.rs  id.rs  mint.rs  mod.rs  name.rs  percent.rs  price.rs  supply.rs  symbol.rs  trades.rs  uri.rs  volume.rs
crates/base/src/model/trade/: id.rs  mod.rs
crates/base/src/model/user/: mod.rs
crates/base/src/model/wallet/: mod.rs
crates/base/src/repo/: cache.rs  mod.rs
crates/base/src/repo/address/: count.rs  get.rs  get_or_populate.rs  insert.rs  list.rs  list_or_populate.rs  mod.rs  shared.rs
crates/base/src/repo/auth/: count.rs  create.rs  get.rs  list.rs  mod.rs
crates/base/src/repo/invocation/: count.rs  create.rs  get.rs  mod.rs
crates/base/src/repo/notification/: count.rs  create.rs  delete.rs  get.rs  mod.rs  pop.rs
crates/base/src/repo/rule/: count.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/base/src/repo/sol/: calculate.rs
crates/base/src/repo/strategy/: count.rs  create.rs  get.rs  list.rs  mod.rs
crates/base/src/repo/token/: count.rs  get.rs  get_or_populate.rs  insert.rs  list.rs  list_or_populate.rs  mod.rs  populate.rs  shared.rs
crates/base/src/repo/token_balance/: insert_token.rs  mod.rs
crates/base/src/repo/token_pair/: count.rs  get.rs  get_or_populate.rs  insert.rs  list.rs  list_or_populate.rs  mod.rs  shared.rs
crates/base/src/repo/user/: count.rs  create.rs  get.rs  list.rs  mod.rs
crates/base/src/repo/wallet/: count.rs  create.rs  get.rs  list.rs  mod.rs
crates/base/src/repo/wallet_balance/: insert_sol.rs  insert_token.rs  mod.rs
crates/base/src/service/: mod.rs
crates/base/src/service/auth/: get.rs  mod.rs
crates/base/src/service/notification/: create.rs  create_condition_matched.rs  create_condition_met.rs  create_rule_matched.rs  delete.rs  mod.rs  pop.rs
crates/base/src/service/rule/: create.rs  get.rs  list.rs  mod.rs  update.rs
crates/base/src/service/strategy/: create.rs  list.rs  mod.rs
crates/base/src/service/token/: get.rs  mod.rs
crates/base/src/service/user/: authenticate.rs  get.rs  get_by_id.rs  get_or_create.rs  get_wallet.rs  mod.rs
crates/base/tests/: mod.rs
crates/base/tests/repo/: mod.rs
crates/base/tests/repo/address/: get_or_populate.rs  list_or_populate_by_address.rs
crates/base/tests/repo/auth/: create.rs  get.rs  mod.rs
crates/base/tests/repo/invocation/: create.rs  mod.rs
crates/base/tests/repo/notification/: create.rs  delete.rs  get.rs  mod.rs  pop.rs
crates/base/tests/repo/rule/: create.rs  get.rs  list.rs  list_active.rs  list_user.rs  mod.rs  update.rs
crates/base/tests/repo/strategy/: create.rs  get.rs  list.rs
crates/base/tests/service/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: byte.rs  config.rs  format.rs  leb128.rs  lib.rs  limiter.rs  signal.rs
crates/common/src/crypt/: key.rs  mod.rs  nonce.rs
crates/common/src/format/: count.rs  market_cap.rs  mod.rs  percent.rs  price.rs  volume.rs
crates/common/src/model/: age.rs  block.rs  count.rs  limit.rs  market_cap.rs  mod.rs  partition.rs  percent.rs  price.rs  query.rs  telegram.rs  timeframe.rs  timestamp.rs  timeunit.rs  url.rs  volume.rs
crates/common/src/repo/: error.rs  mod.rs  pool.rs
crates/common/src/service/: mod.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/integration/src/telegram/: mod.rs
crates/render/: Cargo.toml
crates/render/examples/: another_test.rs  image.rs  test.rs
crates/render/src/: error.rs  font.rs  lib.rs
crates/render/src/page/: mod.rs  pumpfun.rs
crates/render/src/render/: background.rs  line.rs  mod.rs  text.rs  watermark.rs
crates/solana/: Cargo.toml  notice.md
crates/solana/examples/: balance.rs  dummy.rs  pumpfun.rs  pumpfun_buy_sell.rs  pumpfun_curve.rs  raydium_quote.rs  raydium_swap.rs  slot.rs  stream.rs
crates/solana/src/: convert.rs  lib.rs  parse.rs
crates/solana/src/chain/: convert.rs  error.rs  mod.rs
crates/solana/src/jupiter/: mod.rs  parse.rs
crates/solana/src/model/: account.rs  mod.rs  signature.rs  slot.rs  summary.rs  transaction.rs
crates/solana/src/pumpfun/: buy.rs  constant.rs  ix.rs  mod.rs  parse.rs  sell.rs  util.rs
crates/solana/src/raydium/: error.rs  mod.rs  quote.rs  swap.rs
crates/solana/src/repo/: mod.rs
crates/solana/src/rpc/: account.rs  block.rs  slot.rs
crates/solana/src/stream/: block.rs  mod.rs  slot.rs
crates/solana/src/token_info/: mod.rs  rpc.rs  test.rs
crates/solana/src/venue/: mod.rs  parse.rs
crates/solana/src/ws/: mod.rs  program.rs  response.rs  slot.rs
crates/solana/tests/: mod.rs  token_info.rs
crates/solana/tests/chain/: mod.rs  token_info.rs
crates/solana/tests/jupiter/: mod.rs
crates/solana/tests/pumpfun/: mod.rs
crates/solana/tests/repo/: mod.rs
crates/testing/: Cargo.toml
crates/testing/src/: address.rs  auth.rs  hash.rs  invocation.rs  jupiter.rs  lib.rs  notification.rs  pumpfun.rs  rule.rs  strategy.rs  token.rs  token_pair.rs  user.rs  wallet.rs
crates/testing/src/base/: mod.rs  notification.rs  strategy.rs  user.rs  wallet.rs
crates/testing/src/solana/: address.rs  mod.rs  token.rs  token_pair.rs
(+387 files in other folders)
