[package]
name = "base"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
log = "0.4.25"

[dev-dependencies]
futures-util = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
testing = { path = "../testing" }
test-log = { workspace = true }
tokio = { workspace = true }