[package]
name = "base"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
bigdecimal = { workspace = true }
futures-util = { workspace = true }

log = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }

tokio = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
testing = { path = "../testing" }
test-log = { workspace = true }
tokio = { workspace = true }