[package]
name = "common"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
bigdecimal = {workspace = true}
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]