[package]
name = "integration"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
chrono = { version = "0.4.39" }
hex = { version = "0.4.3" }
ring = { version = "0.17.8" }
urlencoding = "2.1.3"

serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4.25"


[dev-dependencies]
