[package]
name = "render"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../../crates/common" }
solana = { path = "../../crates/solana" }

rand = {workspace = true}
image = { version = "0.25.5" }
rusttype = { version = "0.9.3" }
tokio = { workspace = true }

[dev-dependencies]