[package]
name = "solana"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

async-trait = { workspace = true }
futures-util = { workspace = true }

mpl-token-metadata = { version = "5.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }

solana-rpc-client = { version = "2.1.9" }
solana-sdk = { workspace = true }
solana-transaction-status = { version = "2.1.9" }
solana-client = { version = "2.1.9" }

spl-token = { version = "6.0.0" }
spl-token-2022 = { version = "6.0.0" }
spl-associated-token-account = { version = "6.0.0" }
spl-token-metadata-interface = { version = "0.6.0" }
spl-type-length-value = { version = "0.7.0" }

log = { workspace = true }
sqlx = { workspace = true }

uint = { workspace = true }

tokio = { workspace = true }


[dev-dependencies]
dotenv = { workspace = true }
testing = { path = "../testing" }
lazy_static = { workspace = true }
rand = { workspace = true }
test-log = { workspace = true }
